[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Portal/Portal.png" type="Texture" id=1]
[ext_resource path="res://Src/Portal/Portal.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sounds/portal_idle.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 5 ]
}

[sub_resource type="Animation" id=2]
resource_name = "close"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 3, 2, 1, 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 16 )

[node name="Portal" type="Area2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 1 )
hframes = 12
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 4 )
anims/close = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -16 )
shape = SubResource( 1 )

[node name="IdleSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
max_distance = 128.0
bus = "Sound"

[connection signal="body_entered" from="." to="." method="_on_Portal_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
